# cfpint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci-template-check.yml  ci-tests.yml
requirements/: cfpint-requirements.txt  py311.yml  py312.yml  py313.yml  py314.yml
src/cfpint/: __init__.py  _cfarray_units_like.py  _core.py
src/cfpint/tests/: test_basic.py
