[build-system]
# Defined by PEP 518
requires = [
# Some packages will require extra additions to this list. E.g "Cython" or "Numpy"
  "setuptools>=77.0.3",
  "setuptools_scm[toml]>=8",
  "wheel"
]
# Defined by PEP 517
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "cfpint Contributors", email = "scitools.pub@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dynamic = [
    "dependencies",
    "readme",
    "version",
]
description = "CF compatible extensions for pint units"
keywords = [
    "cf-metadata",
    "data-analysis",
    "pint",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "scitools-cfpint"
requires-python = ">=3.11"

[project.urls]
Code = "https://github.com/SciTools/cfpint"
Discussions = "https://github.com/SciTools/cfpint/discussions"
Issues = "https://github.com/SciTools/cfpint/issues"

[tool.check-manifest]
ignore = ["src/cfpint/_version.py"]

[tool.codespell]
ignore-words-list = "alpha-numeric,assertIn,degreee,discontiguities,lazyness,meaned,nin,re-use,re-uses,re-using,re-used,anc,abl,ND,Nd" # This is the full list of words that we ignore in all repositories.

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
include = [
    "src/cfpint/*",
]
omit = [
    "src/cfpint/tests/*",
]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/error_code_list2.html
disable_error_code = []
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
warn_unreachable = true

[tool.numpydoc_validation]
# https://numpydoc.readthedocs.io/en/latest/validation.html#validation-checks
checks = [
    "all",  # Enable all numpydoc validation rules, apart from the following:

    # -> Docstring text (summary) should start in the line immediately
    #    after the opening quotes (not in the same line, or leaving a
    #    blank line in between)
    # Reason for ignore: A chosen house-style
    "GL01",  # Permit summary line on same line as docstring opening quotes.

    # -> Closing quotes should be placed in the line after the last text
    #    in the docstring (do not close the quotes in the same line as
    #    the text, or leave a blank line between the last text and the
    # quotes)
    # Reason for ignore: A chosen house-style
    "GL02",  # Permit a blank line before docstring closing quotes.

    #    -> Double line break found; please use only one blank line to
    #    separate sections or paragraphs, and do not leave blank lines
    #    at the end of docstrings
    # Reason for ignore: We benefit from more flexability in formatting
    "GL03",  # Ignoring.

    # -> See Also section not found
    "SA01",  # Not all docstrings require a "See Also" section.

    # -> No extended summary found
    "ES01",  # Not all docstrings require an "Extended Summary" section.

    # -> No examples section found
    "EX01",  # Not all docstrings require an "Examples" section.

    # -> No Yields section found
    "YD01",  # Not all docstrings require a "Yields" section.

]
exclude = [
    '\.__eq__$',
    '\.__ne__$',
    '\.__repr__$',
]

[tool.pytest.ini_options]
addopts = ["-ra", "-v", "--strict-config", "--strict-markers", "--doctest-modules"]
testpaths = "src/cfpint>"
log_level = "INFO"

[tool.repo-review]
ignore = [
    # https://learn.scientific-python.org/development/guides/style/#PC180
    # Not possible to run on the hardware used by the majority of our developers. Might change in future!
    "PC180", # Uses prettier.
    # https://learn.scientific-python.org/development/guides/packaging-simple#PP006
    "PP006",  # Uses dev dependency group
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
preview = false

[tool.ruff.lint]
ignore = [
    # NOTE: Non-permanent exclusions should be added to the ".ruff.toml" file.

    # flake8-commas (COM)
    # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "COM812",  # Trailing comma missing.
    "COM819",  # Trailing comma prohibited.

    # flake8-implicit-str-concat (ISC)
    # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    # NOTE: This rule may cause conflicts when used with "ruff format".
    "ISC001",  # Implicitly concatenate string literals on one line.
]
preview = false
select = [
    "ALL",
    # Note: the above "all" disables conflicting rules, if you want that
    # rule it needs to be explicitly enabled below:
    "D212",  # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["cfunits"]  # e.g "iris" or "cf_units"

[tool.ruff.lint.mccabe]
max-complexity = 22

[tool.ruff.lint.per-file-ignores]
# All test scripts
"src/cfpint/tests/*.py" = [
    # https://docs.astral.sh/ruff/rules
    "D100",  # Missing docstring in public module
    "D205",  # 1 blank line required between summary line and description
    "D401",  # 1 First line of docstring should be in imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = "requirements/cfpint-requirements.txt"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["cfpint"]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
# https://setuptools-scm.readthedocs.io/en/latest/extending/#version-number-construction
write_to = "src/cfpint/_version.py"